# strudel-vst-bridge

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  build.rs
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-05-08-vst3-support.md  2026-05-14-juce-rewrite.md
docs/superpowers/specs/: 2026-05-08-vst3-support-design.md
old/: auv3_host.m  build.rs  main.rs
src/: AudioRouter.cpp  AudioRouter.h  Main.cpp  PluginHost.cpp  PluginHost.h  PluginWindow.cpp  PluginWindow.h  WsProtocol.cpp  WsProtocol.h  WsServer.cpp  WsServer.h  auv3_host.m  main.rs
