[package]
name = "strudel-vst-bridge"
version = "0.2.0"
edition = "2021"
description = "WebSocket bridge between strudel and AU plugins"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
cc = "1"

[build-dependencies]
cc = "1"
